# tiger-compiler

./: .gitignore  README.md
Example2/: codegen.h  parser.cpp  parser.hpp  tokens.cpp  tokens.l
Example3/: Makefile  ast.cpp  ast.h  tiger.y  tigerc.cpp
Example3/mytest/: test1.tig  test2.tig  test3.tig  test4.tig  test5.tig  test6-c.c  test6.tig
Example3/test/: queens.tig  spider.py
Project/GraphViz/: tiger.txt
Project/Lexical/: tokens.l
Project/Tiger/: Makefile  Tiger.cpp  driver.cpp  driver.h  error.cpp  error.h  location.hh  parser.output  parser.tab.cc  parser.tab.hh  parser.yy  position.hh  scanner.h  scanner.l  sem_test.sh  stack.hh  test  test.cpp  testcase.txt  tiger.cc  type-mapping.txt
Project/Tiger/src/: BoolList.h  CMakeLists.txt  Debug.cpp  Debug.h  Env.cpp  Env.h  Error.cpp  Error.h  Frame.cpp  Frame.h  IR.cpp  IR.h  IRTree.cpp  IRTree.h  PrintIRTree.cpp  PrintIRTree.h  Semantic.cpp  Semantic.h  Temporary.cpp  Temporary.h  Tiger.sln  Tiger.vcxproj  Tiger.vcxproj.filters  Translate.cpp  Translate.h  Types.cpp  Types.h  absyntree.cpp  absyntree.h  cmdline.h  driver.cpp  driver.h  location.hh  parser.cpp  parser.h  parser.output  parser.yy  position.hh  scanner.cpp  scanner.l  (+1 more)
Project/Tiger/src/bison/: parser.yy
Project/Tiger/src/flex/: scanner.l
TigerExample/: README.md
TigerExample/chap1/: main.c  makefile  prog1.c  prog1.h  slp.c  slp.h  util.h
TigerExample/chap10/: absyn.c  assem.c  assem.h  canon.c  codegen.h  errormsg.c  flowgraph.c  fuck.tig.s  graph.c  (+23 more)
exp3/: Exp3-WangZixuan-3140101215.y  calculator.tab.c  calculator.tab.h  calculator.y  input.txt  run.sh  test.c
(+98 files in other folders)
